--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,4 @@
-name: Beepboop Starterbot
+name: Phil's Go Bot
 description: A simple Go bot starter for Beep Boop
 avatar: resources/avatar.jpg
 #background: resources/background.png
